--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,15 @@ dependencies:
   objectbox_flutter_libs: ^2.1.0
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  firebase_core: ^2.14.0
-  firebase_crashlytics: ^3.3.3
+  firebase_core: ^2.15.0
+  firebase_crashlytics: ^3.3.4
   device_info_plus: ^9.0.2
   lehttp_overrides: ^1.0.3
   envied: ^0.3.0+3
-  dio: ^5.2.1+1
+  dio: ^5.3.0
   json_serializable: ^6.7.1
   json_annotation: ^4.8.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
